--- a/Nov_27/QUIZ_SERVICE/src/main/resources/application.properties
+++ b/Nov_27/QUIZ_SERVICE/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=MicroServices_2
+spring.application.name=QUIZ-SERVICE
 spring.datasource.url=jdbc:mysql://localhost:3306/trial1db
 spring.datasource.username=root
 spring.datasource.password=root
