--- a/Nov_27_28_29/QUESTION_SERVICE/pom.xml
+++ b/Nov_27_28_29/QUESTION_SERVICE/pom.xml
@@ -57,6 +57,10 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
+	<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-config</artifactId>
+</dependency>
 
         <!-- Lombok -->
         <dependency>
