--- a/Nov_27_28_29/QUIZ_SERVICE/src/main/resources/application.properties
+++ b/Nov_27_28_29/QUIZ_SERVICE/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=QUIZ-SERVICE
-spring.datasource.url=jdbc:mysql://localhost:3306/trial1db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8080
+spring.config.import=configserver:http://localhost:8888
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/trial1db
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
